# cs354r-assignment4

./: .gitignore  .gitignore~  BaseApplication.cpp  BaseApplication.h  Game.cpp  Game.cpp~  Game.h  Game.h~  GameResource.h  GameResource.h~  Makefile  Makefile.am  Makefile.am~  Makefile.in  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h  Planet.cpp  Planet.cpp~  Planet.h  Planet.h~  Player.cpp  Player.cpp~  Player.h  Player.h~  Pluto.cpp  Pluto.cpp~  Pluto.h  Pluto.h~  PlutoGui.h  PlutoGui.h~  README.md  Scene.cpp  Scene.cpp~  Scene.h  Scene.h~  ScenePlanet.cpp  ScenePlanet.cpp~  ScenePlanet.h  (+26 more)
.deps/: OgreApp-Game.Po  OgreApp-PhysicsEngine.Po  OgreApp-PhysicsObject.Po  OgreApp-Planet.Po  OgreApp-Player.Po  OgreApp-Pluto.Po  OgreApp-Scene.Po  OgreApp-ScenePlanet.Po  OgreApp-SceneSpace.Po  OgreApp-SceneTerrain.Po  OgreApp-Shuriken.Po  OgreApp-Sound.Po  OgreApp-TerrainMaterial.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
datafiles/animations/: PlutoAnimations.xml  PlutoAnimations.xml~  example.xml  example.xml~
datafiles/fonts/: DejaVuSans-8.font
datafiles/imagesets/: Pluto.imageset  Pluto.imageset~
datafiles/layouts/: GameConfig.layout  GameConfig.layout~  GameEnd.layout  GameEnd.layout~  GamePause.layout  GamePause.layout~  GameScore.layout  GameScore.layout~  GameTitle.layout  GameTitle.layout~  Pluto.layout  Pluto.layout~
media/models/: Shuriken.mesh
media/particle/: Examples.particle  Examples.particle~  PlutoParticles.particle  PlutoParticles.particle~  smoke.particle  smoke.particle~
(+13 files in other folders)
